syntax = "proto3";
package cert;

option go_package = "/Users/Maggie/Desktop/Short-lived_cert/certificate/cert/;cert";

message Message {
  string body = 1;
}

message DomainInfo {
  string domain = 1;
  string pubkey = 2;
}

message Cert {
  string cert = 1;
  string hash = 2;
  string time = 3;
  string precert = 4;
}

message KeyRequest {
  string domain = 1;
  string time = 2;
}

message Key {
  string dailykey = 1;
}

service CertService {
  rpc SayHello(Message) returns (Message) {}

  rpc Issue(DomainInfo) returns (stream Cert) {}

  rpc RequestKey(KeyRequest) returns (Key) {}
}